--- a/bare-metal-os/Cargo.toml
+++ b/bare-metal-os/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2018"
 
 [dependencies]
 bootloader = "0.9"
+lazy_static = { version = "1.0", features = ["spin_no_std"] }
+spin = "0.5.2"
 volatile = "0.2.6"
+
 
 [profile.dev]
 panic = "abort"
