--- a/bare-metal-os/Cargo.toml
+++ b/bare-metal-os/Cargo.toml
@@ -7,11 +7,10 @@ edition = "2018"
 bootloader = "0.9"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 spin = "0.5.2"
+x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
 volatile = "0.2.6"
 
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-success-exit-code = 33                                       # (0x10 << 1) | 1
