update: dockerfile multi-stage caching

--- a/Rust/llm-swarm/Dockerfile
+++ b/Rust/llm-swarm/Dockerfile
@@ -1,4 +1,6 @@
-FROM rust:bookworm
+# Build the Rust app
+
+FROM rust:bookworm as builder
 
 RUN apt update && apt install -y \
     libssl-dev \
@@ -11,4 +13,16 @@ COPY . .
 
 RUN cargo build --release
 
-CMD ["cargo", "run", "--release"]
+# Create a small runtime image
+FROM debian:bookworm-slim
+
+RUN apt update && apt install -y \
+    libssl-dev \
+    pkg-config \
+    build-essential \
+    musl-tools
+
+# Copy the compiled RUST binary from the builder stage
+COPY --from=builder /app/target/release/llm-swarm /usr/local/bin/llm-swarm
+
+CMD ["llm-swarm"]
