--- a/sys-config/i3/i3blocks.conf
+++ b/sys-config/i3/i3blocks.conf
@@ -6,18 +6,18 @@ markup=none
 # Custom Battery Block
 [battery]
 label=BAT: 
-command=$HOME/.config/i3blocks/scripts/battery
+command=$HOME/Documents/config/scripts/i3block_battery
 interval=2
 
 # Memory Block (similar to your old one)
 [memory]
 label=MEM:
-command=$HOME/.config/i3blocks/scripts/memory
+command=$HOME/Documents/config/scripts/i3block_memory
 interval=2
 
 [net_speed]
 label=
-command=$HOME/.config/i3blocks/scripts/net_speed
+command=$HOME/Documents/config/scripts/i3block_net
 interval=1
 
 # Time Block
@@ -28,6 +28,5 @@ interval=20
 
 [calendar]
 label=
-command=$HOME/.config/i3blocks/scripts/calender
+command=$HOME/Documents/config/scripts/i3block_calender
 interval=20
-
