feat: update i3block_net to include upload speed

--- a/sys-config/i3/i3blocks.conf
+++ b/sys-config/i3/i3blocks.conf
@@ -20,6 +20,11 @@ label=
 command=$HOME/Documents/config/scripts/i3block_net
 interval=1
 
+[volume]
+label=VOL:
+command=$HOME/Desktop/Hackbit/sys-config/i3/scripts/i3block_volume
+interval=1
+
 # Time Block
 [time]
 label=
